# movie-translate

./: .gitignore  CLAUDE.md  CLAUDE_EN.md  PRD.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STARTUP_GUIDE.md  Technical-Solution.md  UI-Design.md  config.example.json  easy-prd.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_app.py  setup.py  simple_test.py  simple_verification.py  start_app.py  verify_project.py
.claude/: settings.local.json
src/movie_translate/: __init__.py
src/movie_translate/api/: __init__.py  backend.py  client.py  server.py
src/movie_translate/core/: __init__.py  cache_manager.py  config.py  error_handler.py  interrupt_recovery.py  logger.py  progress_manager.py
src/movie_translate/services/: __init__.py  audio_processing.py  character_identification.py  speech_recognition.py  translation.py  video_synthesis.py  voice_cloning.py
src/movie_translate/ui/: __init__.py  character_manager.py  file_import.py  main_app.py  progress_display.py  recovery_dialog.py  settings_panel.py  step_navigator.py
src/movie_translate/utils/: __init__.py  audio_utils.py  file_utils.py
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_cache_manager.py  test_config.py  test_database_models.py  test_logger.py
tools/: code_optimizer.py  code_quality_checker.py  performance_benchmark.py
