[project]
name = "movie-translate"
version = "0.1.0"
description = "AI-powered movie translation and dubbing tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.0",
    "pyside6>=6.5.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "ffmpeg-python>=0.2.0",
    "openai>=1.0.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "pydub>=0.25.1",
    # "librosa>=0.10.0",  # Removed due to numba compatibility issues with Python 3.10
    "soundfile>=0.12.0",
    "pyttsx3>=2.90",
    "srt>=3.5.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0",
    "asyncio>=3.4.3",
    "uvicorn>=0.23.0",
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "redis>=4.6.0",
    "celery>=5.3.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
